fix(availability): add get schedule for mentee
